# quantwave

./: .gitignore  404.html  AGENTS.md  Cargo.toml  DOCUMENTATION_DECISIONS.md  DOLT_REMOTE.md  LICENSE  README.md  audit_ehlers.py  audit_tips.py  fisher_parsed.txt  gen_benchmarks.py  gen_python_api.py  index.html  inverse_fisher_parsed.txt  mama_parsed.txt  manifest  mkdocs.yml  nextest_output.txt  objects.inv  requirements-docs.txt  sitemap.xml  swiss_army_parsed.txt  zerolag_parsed.txt
.beads/: .beads-credential-key  metadata.json
.github/workflows/: docs.yml  publish.yml  python-publish.yml  release.yml
DOCUMENTATION_DECISIONS/: index.html
api/: index.html
api/SUMMARY/: index.html
api/quantwave/: index.html
artifacts/: anticipating_turning_points_parsed.txt  anticipating_turning_points_v2.txt  fourier_transform.txt  peek_into_the_future.txt  time_warp.txt  truncated_indicators.txt  ultimate_channel.txt  ultimate_channel_parsed.txt  ultimatesmoother_parsed.txt  wfo.txt  wfo_v2.txt  windowing.txt
benchmarks/: index.html
changelog/: index.html
contributing/: index.html
docs/: benchmarks.md  book.toml  changelog.md  contributing.md  index.md  purpose.md  roadmap.md
docs/assets/: indicator-badges.css
docs/book/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-dd967418.js  toc-b7c6e01e.js  toc.html
docs/examples/: batch-streaming.md
docs/getting-started/: python.md  rust.md
docs/guides/: options_india.md
docs/src/: README.md  SUMMARY.md
examples/batch-streaming/: index.html
examples/notebooks/: index.html
getting-started/python/: index.html
getting-started/rust/: index.html
guides/indicators/: index.html
guides/options_india/: index.html
planning/: ARCHITECTURE.md  GRILL_DECISIONS.md  IMPLEMENTATION_PLAN.md  quantwave
purpose/: index.html
quantwave/: Cargo.toml
quantwave-core/: Cargo.toml
quantwave-core/proptest-regressions/indicators/: bandpass.txt  oc_price_rsi.txt  overlap.txt  rocket_rsi.txt
quantwave-core/src/: lib.rs  test_utils.rs  traits.rs
quantwave-core/src/indicators/: adaptive_ema.rs  alligator.rs  alma.rs  amfm.rs  atr_ts.rs  autotune.rs  bandpass.rs  butterworth.rs  cg.rs  channel_cycle.rs  choppiness_index.rs  classic_laguerre.rs  continuation_index.rs  correlation_cycle.rs  correlation_trend.rs  cyber_cycle.rs  cybernetic_oscillator.rs  cycle.rs  cycle_trend_analytics.rs  dmh.rs  donchian.rs  dsma.rs  ehlers_autocorrelation.rs  ehlers_filter.rs  ehlers_loops.rs  ehlers_stochastic.rs  ehlers_ultimate_oscillator.rs  emd.rs  exp_dev_bands.rs  fisher.rs  fisher_high_pass.rs  fourier_series.rs  fourier_transform.rs  fractals.rs  frama.rs  gap_momentum.rs  gaussian.rs  generalized_laguerre.rs  griffiths_dominant_cycle.rs  griffiths_predictor.rs  (+86 more)
quantwave-core/src/options_india/: black_scholes.rs  chain_analytics.rs  india.rs  iv_solver.rs  mod.rs
quantwave-core/src/regimes/: analytics.rs  ensemble.rs  gmm.rs  hmm.rs  hmm_gas.rs  hsmm.rs  india.rs  mod.rs  ms_garch.rs  multi_asset.rs  pelt.rs  tar.rs  volatility_clustering.rs
quantwave-core/tests/: test_wrapper.rs
quantwave-core/tests/gold_standard/: atr_ts_14_25.json  ehlers_loops.json  heikin_ashi.json  ichimoku.json  keltner_20_20_15.json  mad.json  mesa_stochastic.json  oc_price_rsi.json  rsih.json  vortex_14.json  voss_predictor.json
quantwave-plugins/: Cargo.toml
quantwave-plugins/src/: lib.rs
quantwave-polars/: Cargo.toml
quantwave-polars/src/: lib.rs
quantwave-python/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
quantwave-python/.github/workflows/: CI.yml
quantwave-python/python/quantwave/: __init__.py  polars.py
quantwave-python/python/quantwave/_quantwave/: __init__.py  quantwave_python.py
quantwave-python/python/quantwave/quantwave_python/: libquantwave_python.dylib  quantwave_python.py
quantwave-python/src/: lib.rs
quantwave-xtask/: Cargo.toml
quantwave-xtask/src/: main.rs
quantwave/src/: lib.rs
references/Ehlers Papers/: STOCKS & COMMODITIES Magazine.html
references/parsed_data/: cg_oscillator_parsed.txt  frama_parsed.txt
references/traderstipsreference/: TRADERS’ TIPS - APRIL 2019.html  TRADERS’ TIPS - APRIL 2020.html  TRADERS’ TIPS - APRIL 2023.html  TRADERS’ TIPS - AUGUST 2023.html  TRADERS’ TIPS - AUGUST 2025.html  TRADERS’ TIPS - DECEMBER 2023.html  TRADERS’ TIPS - DECEMBER 2024.html  TRADERS’ TIPS - FEBRUARY 2021.html  TRADERS’ TIPS - FEBRUARY 2023.html  TRADERS’ TIPS - FEBRUARY 2025.html  TRADERS’ TIPS - FEBRUARY 2026.html  TRADERS’ TIPS - JANUARY 2019.html  TRADERS’ TIPS - JANUARY 2021.html  TRADERS’ TIPS - JANUARY 2024.html  TRADERS’ TIPS - JANUARY 2025.html  TRADERS’ TIPS - JULY 2019.html  TRADERS’ TIPS - JULY 2022.html  TRADERS’ TIPS - JULY 2023.html  TRADERS’ TIPS - JULY 2025.html  TRADERS’ TIPS - JUNE 2019.html  TRADERS’ TIPS - JUNE 2020.html  TRADERS’ TIPS - JUNE 2021.html  TRADERS’ TIPS - JUNE 2023.html  TRADERS’ TIPS - January 2014.html  TRADERS’ TIPS - MARCH 2018.html  TRADERS’ TIPS - MARCH 2022.html  TRADERS’ TIPS - MARCH 2023.html  TRADERS’ TIPS - MARCH 2025.html  TRADERS’ TIPS - MARCH 2026.html  TRADERS’ TIPS - MAY 2018.html  TRADERS’ TIPS - MAY 2022.html  TRADERS’ TIPS - MAY 2023.html  TRADERS’ TIPS - MAY 2025.html  TRADERS’ TIPS - NOVEMBER 2021.html  TRADERS’ TIPS - NOVEMBER 2023.html  TRADERS’ TIPS - NOVEMBER 2024.html  TRADERS’ TIPS - OCTOBER 2021.html  TRADERS’ TIPS - OCTOBER 2023.html  TRADERS’ TIPS - SEPTEMBER 2021.html  TRADERS’ TIPS - SEPTEMBER 2022.html  (+4 more)
roadmap/: index.html
scratch/: amfm_text.txt  cg_oscillator_text.txt  correlation_trend_text.txt  dsma_text.txt  ehlers_filters_text.txt  emd_text.txt  gaussian_filters_text.txt  inject_metadata.py  inverse_fisher_text.txt  predictive_indicators_text.txt  rocket_science_text.txt  update_indicator_metadata.py
scripts/: find_missing.py  find_missing_v2.py  insert_metadata_stubs.py  update_benchmarks_metrics.py
search/: search_index.json
tests/gold_standard/: alma_9_085_6.json  cycle_trend_analytics.json  donchian_5.json  ehlers_autocorrelation.json  ehlers_stochastic.json  fractals.json  (+7 more)
(+749 files in other folders)
