[workspace]
members = [
    "quantwave",
    "quantwave-core",
    "quantwave-polars",
    "quantwave-plugins",
    "quantwave-xtask",
    "quantwave-python",
]
resolver = "2"

[workspace.package]
version = "0.1.6"
edition = "2024"
license = "MIT"
repository = "https://github.com/lavs9/quantwave"
homepage = "https://github.com/lavs9/quantwave"
authors = ["Mayank Lavania"]
description = "A high-performance, Polars-native technical analysis library for Rust."
readme = "README.md"
categories = ["science", "mathematics"]
keywords = ["trading", "technical-analysis", "polars", "finance"]

[workspace.dependencies]
polars = { version = "0.50", features = ["lazy", "dtype-struct"] }
polars-core = { version = "0.50" }
polars-arrow = { version = "0.50" }
talib-rs = "0.1"
proptest = "1.0"
approx = "0.5"
serde = { version = "1.0", features = ["derive"] }
rustfft = "6"
rand = "0.8"
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "0.23", features = ["derive"] }

[profile.dev]
opt-level = 0
debug = 1 # Use line tables only to speed up linking
codegen-units = 256 # More units = faster compilation, slightly slower code
incremental = true

[profile.test]
opt-level = 0
debug = 1 # Use line tables only to speed up linking
codegen-units = 256
incremental = true
