[workspace]
members = [
    "quantwave",
    "quantwave-core",
    "quantwave-polars",
    "quantwave-plugins",
    "quantwave-xtask",
    "quantwave-python",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/lavs9/quantwave"
homepage = "https://github.com/lavs9/quantwave"
authors = ["Mayank Lavania"]
description = "A high-performance, Polars-native technical analysis library for Rust."
readme = "README.md"
categories = ["science", "mathematics"]
keywords = ["trading", "technical-analysis", "polars", "finance"]

[workspace.dependencies]
polars = { version = "0.46", features = ["lazy", "dtype-struct", "moment", "cum_agg"] }
polars-core = { version = "0.46" }
polars-arrow = { version = "0.46" }
talib-rs = "0.1"
proptest = "1.0"
approx = "0.5"
serde = { version = "1.0", features = ["derive"] }
rustfft = "6"
rand = "0.8"
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
statrs = "0.18"
quantwave-core = { path = "quantwave-core", version = "0.2.0" }
quantwave-polars = { path = "quantwave-polars", version = "0.2.0" }
quantwave-plugins = { path = "quantwave-plugins", version = "0.2.0" }

[profile.dev]
opt-level = 0
debug = 1 # Use line tables only to speed up linking
codegen-units = 256 # More units = faster compilation, slightly slower code
incremental = true

[profile.test]
opt-level = 0
debug = 1 # Use line tables only to speed up linking
codegen-units = 256
incremental = true
