[package]
name = "quantwave-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
categories.workspace = true
keywords.workspace = true

[lib]
name = "quantwave_plugins"
crate-type = ["cdylib", "rlib"]

[dependencies]
quantwave-core = { path = "../quantwave-core", version = "0.1.8" }
polars = { workspace = true }
polars-arrow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
