[package]
name = "quantwave-polars"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
quantwave-core = { path = "../quantwave-core", version = "0.1.9" }
polars = { workspace = true }
serde = { workspace = true }

thiserror = { workspace = true }
