[package]
name = "quantwave-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
categories.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
uniffi = { version = "0.31", features = ["cli"] }
quantwave-core = { workspace = true }
paste = "1.0.15"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }
