[build-system]
requires = ["maturin>=1.0,<2.0", "uniffi-bindgen==0.31.0"]
build-backend = "maturin"

[project]
name = "quantwave"
dynamic = ["version"]
description = "High-performance Rust + Polars quantitative finance library with 150+ indicators and full Ehlers DSP suite"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mayank Lavania" }]
keywords = ["technical-analysis", "ta-lib", "trading", "quant", "rust", "polars"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/lavs9/quantwave"
Documentation = "https://lavs9.github.io/quantwave/"
Repository = "https://github.com/lavs9/quantwave"
"Bug Tracker" = "https://github.com/lavs9/quantwave/issues"

[tool.maturin]
module-name = "quantwave._quantwave"
python-source = "python"
