[package]
name = "quantwave"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"
categories.workspace = true
keywords.workspace = true

[dependencies]
quantwave-core = { path = "../quantwave-core", version = "0.1.14" }
quantwave-polars = { path = "../quantwave-polars", version = "0.1.14", optional = true }

[features]
default = ["polars"]
polars = ["quantwave-polars"]
